# Redline-Agent-Safety-Eval

./: .env  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  fly.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: Dockerfile  pyproject.toml  requirements.txt  start.sh
backend/app/: .env.example  main.py
backend/app/agents/: baseline_agent.py  debate_agent.py  guardrails.py  interface.py
backend/app/api/: routes_evals.py  routes_health.py  routes_public.py  routes_runs.py  routes_testcases.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: alembic.ini  base.py  models.py  session.py
backend/app/db/alembic/: env.py
backend/app/db/alembic/versions/: 0001_initial.py  0002_agent_endpoint.py  0003_analytics_events.py  0004_invite_tokens.py  0005_run_stream_token.py  0006_analytics_submitter_endpoint.py  0007_run_result_judge_reasoning.py
backend/app/evals/: generators.py  metrics.py  runner.py  scoring.py  testcases.py
backend/app/llm/: judge.py  prompts.py  provider.py  schemas.py
backend/app/queue/: tasks.py  worker.py
backend/app/utils/: hashing.py  refusal.py  tiers.py
backend/tests/: conftest.py  test_api_smoke.py  test_canary.py  test_hardening.py  test_injection_detection.py  test_runner_reproducible.py  test_scoring.py
docs/guides/: MAULT-AI-CODER-GUIDE.md
mcp-server/: README.md  pyproject.toml
mcp-server/redline_mcp/: server.py
ui/: admin.html  app.js  index.html  leaderboard.html  methodology.html  styles.css
