[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redline-mcp"
version = "0.1.0"
description = "Claude Code MCP server for Redline safety evals"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
redline-mcp = "redline_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["redline_mcp"]
